# snapshot-comparison

./: CLAUDE.md  Cargo.toml  DOGFOODING_STRATEGY.md  README.md  demo-url.txt  demo.cast  package-lock.json  package.json
.github/workflows/: create-demo.yml  test.yml
scripts/: record-demo.sh
